unpackaged/main/default/objects/Sales_Rep__c/fields/X2019_FY_Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>X2019_FY_Total_Sales__c</fullName>
    <description>Total Sales for the 2019 Fiscal Year</description>
    <inlineHelpText>Total Sales for the 2019 Fiscal Year</inlineHelpText>
    <label>2019 FY Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>