unpackaged/main/default/objects/Sales_Rep__c/fields/X2020_FY_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>X2020_FY_Budget_Amount__c</fullName>
    <description>Total Dollars Budgeted for the 2020 Fiscal Year</description>
    <inlineHelpText>Total Dollars Budgeted for the 2020 Fiscal Year</inlineHelpText>
    <label>2020 FY Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>