unpackaged/main/default/objects/Sales_Rep__c/fields/X2020_FY_Budget_Performance__c.field-meta.xml
<CustomField>
    <fullName>X2020_FY_Budget_Performance__c</fullName>
    <description>Difference in Budgeted vs Actual Sales for the 2020 Fiscal Year</description>
    <inlineHelpText>Difference in Budgeted vs Actual Sales for the 2020 Fiscal Year</inlineHelpText>
    <label>2020 FY Budget Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>