unpackaged/main/default/objects/Sales_Rep__c/fields/X2020_FY_Gross_Profit_Total__c.field-meta.xml
<CustomField>
    <fullName>X2020_FY_Gross_Profit_Total__c</fullName>
    <description>Gross Profit Total for the 2020 Fiscal Year</description>
    <inlineHelpText>Gross Profit Total for the 2020 Fiscal Year</inlineHelpText>
    <label>2020 FY Gross Profit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>