unpackaged/main/default/objects/Sales_Rep__c/fields/X2021_FY_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>X2021_FY_Gross_Profit__c</fullName>
    <description>Gross Profit % from the 2021 Fiscal Year</description>
    <inlineHelpText>Gross Profit % from the 2021 Fiscal Year</inlineHelpText>
    <label>2021 FY Gross Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>