unpackaged/main/default/objects/Sales_Rep__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>If 1 then Sales Year (10/1-9/30) 
Else 2 then Calendar year (12/31-1/1)</description>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>