unpackaged/main/default/objects/Sales_Rep__c/fields/Year_Calc__c.field-meta.xml
<CustomField>
    <fullName>Year_Calc__c</fullName>
    <description>Used by System Admins to determine Calendar (2) or Sales Year (1) on Reports</description>
    <formula>IF( TEXT(Fiscal_Year__c) = &quot;Calendar&quot;, 2, 1)</formula>
    <label>Year Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>