unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_6_1_10_1__c.field-meta.xml
<CustomField>
    <fullName>YTD_6_1_10_1__c</fullName>
    <description>This is a temporary fix to an issue where rollup helper appeared to be timing out because of too much data. We will store YTD sales from 6/1 to end of the year here. Then will add this field to YTD 10/1 - 6/1</description>
    <label>YTD 6/1-10/1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>