unpackaged/main/default/objects/Sales_Rep__c/fields/YTD__c.field-meta.xml
<CustomField>
    <fullName>YTD__c</fullName>
    <inlineHelpText>Totals through last day of previous month</inlineHelpText>
    <label>YTD Sales (Do Not Use)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>