unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_Budget__c.field-meta.xml
<CustomField>
    <fullName>YTD_Budget__c</fullName>
    <description>YTD Budget Roll Up (Not Including Current Month) - Updated by Scheduled Roll-Up Helper Monthly</description>
    <inlineHelpText>YTD Budget Roll Up (Not Including Current Month)</inlineHelpText>
    <label>YTD Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>