unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_Budget_Calendar__c.field-meta.xml
<CustomField>
    <fullName>YTD_Budget_Calendar__c</fullName>
    <label>YTD Budget - Calendar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>