unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_Cost__c.field-meta.xml
<CustomField>
    <fullName>YTD_Cost__c</fullName>
    <label>YTD Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>