unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_Margin__c.field-meta.xml
<CustomField>
    <fullName>YTD_Margin__c</fullName>
    <formula>IF(  YTD__c  &gt; 0, ((YTD__c- YTD_Cost__c )/YTD__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>