unpackaged/main/default/objects/Sales_Rep__c/fields/YTD_Price__c.field-meta.xml
<CustomField>
    <fullName>YTD_Price__c</fullName>
    <label>YTD Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>