unpackaged/main/default/objects/Sales_Rep__c/recordTypes/Sports_Turf.recordType-meta.xml
<RecordType>
    <fullName>Sports_Turf</fullName>
    <active>true</active>
    <label>Sports Turf</label>
</RecordType>