unpackaged/main/default/objects/Sales_Rep__c/validationRules/Mobile_Phone_Number_has_Ten_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Phone_Number_has_Ten_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Mobile__c) &amp;&amp; NOT(ISBLANK(Mobile__c)) &amp;&amp; NOT(REGEX(Mobile__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Phone numbers should be in this format: (999) 999-9999. You may type numbers only with no spaces or formatting, but be sure it is 10 digits.</errorMessage>
</ValidationRule>