unpackaged/main/default/objects/Sales_Rep__c/validationRules/Phone_Number_has_Ten_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_has_Ten_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Phone__c) &amp;&amp; NOT(ISBLANK(Phone__c)) &amp;&amp; NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone numbers should be in this format: (999) 999-9999. You may type numbers only with no spaces or formatting, but be sure it is 10 digits.</errorMessage>
</ValidationRule>