unpackaged/main/default/objects/Sales_Rep__c/listViews/Active_Reps_Foliar_Pak.listView-meta.xml
<ListView>
    <fullName>Active_Reps_Foliar_Pak</fullName>
    <columns>Sales_Rep_Num__c</columns>
    <columns>NAME</columns>
    <columns>ENP_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Manager__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Primary_Location__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Rep__c.Default</value>
    </filters>
    <label>Active Reps Foliar-Pak</label>
    <sharedTo>
        <group>IT_Department</group>
    </sharedTo>
</ListView>