unpackaged/main/default/objects/Sales_Rep__c/listViews/Active_T_O_Reps.listView-meta.xml
<ListView>
    <fullName>Active_T_O_Reps</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep_Num__c</columns>
    <columns>Title__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>Primary_Market__c</columns>
    <columns>Salesforce_User__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Title__c</field>
        <operation>contains</operation>
        <value>Sales</value>
    </filters>
    <filters>
        <field>Primary_Market__c</field>
        <operation>equals</operation>
        <value>Turf and Ornamental</value>
    </filters>
    <label>Active T&amp;O Reps</label>
    <sharedTo>
        <group>Sales_Managers</group>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>