unpackaged/main/default/objects/Sales_Rep__c/listViews/My_ATS_Team.listView-meta.xml
<ListView>
    <fullName>My_ATS_Team</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Facility_Manager__c</columns>
    <columns>Phone__c</columns>
    <columns>Primary_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>My ATS Team</label>
</ListView>