unpackaged/main/default/objects/Sales_Rep__c/listViews/My_Team_Reps.listView-meta.xml
<ListView>
    <fullName>My_Team_Reps</fullName>
    <columns>Sales_Rep_Num__c</columns>
    <columns>NAME</columns>
    <columns>Manager__c</columns>
    <columns>Primary_Location__c</columns>
    <columns>Primary_Market__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Sales Rep Record</label>
    <sharedTo>
        <group>Sales_Managers</group>
        <group>Sales_Reps</group>
    </sharedTo>
</ListView>